system-ui (1.0.12~1) unstable; urgency=low

  * [UNRELEASED]

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Fri, 10 Jun 2011 14:43:08 +0300

system-ui (1.0.11-1) unstable; urgency=low

  * Fixes: NB#264503 - [TASK] Call icon on status area in ongoing call state should be changed to white

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Fri, 10 Jun 2011 14:42:48 +0300

system-ui (1.0.10-1) unstable; urgency=low

  * Fixes: NB#264503 - [TASK] Call icon on status area in ongoing call state should be changed to white

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Fri, 10 Jun 2011 12:40:15 +0300

system-ui (1.0.9-1) unstable; urgency=low

  * Fixes: NB#260155 - LPM can be activated when lock screen is visible.

 -- Janne Sakko <ext-janne.2.sakko@nokia.com>  Wed, 08 Jun 2011 17:50:00 +0300

system-ui (1.0.8-1) unstable; urgency=low

  * Fixes: NB#255350 - [TASK] Ongoing call indication change for status bar

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 08 Jun 2011 15:16:06 +0300

system-ui (1.0.7-1) unstable; urgency=low

  * Fixes: NB#261420 - A banner with the string 'mount_failed' is shown after unplugging the USB cable when the file system could not be mounted

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 07 Jun 2011 16:10:41 +0300

system-ui (1.0.6-1) unstable; urgency=high

  * Fixes: NB#263130 - Status menu can not be closed in portrait by tap outside anymore

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 07 Jun 2011 11:39:20 +0300

system-ui (1.0.5-1) unstable; urgency=low

  * Fixes: NB#260175 - [TASK] Status menu should be whole screen high in landscape

 -- Sachin Kundu <ext-sachin.kundu@nokia.com>  Mon, 06 Jun 2011 16:48:26 +0300

system-ui (1.0.4-1) unstable; urgency=low

  * Fixes: NB#262384 - Status menu takes ages to appear after boot

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Fri, 03 Jun 2011 15:34:12 +0300

system-ui (1.0.3-1) unstable; urgency=low
